Refactor(CircleCI): Update circleci
