# public/swagger.json
@@ -33,6 +33,56 @@
                     }
                 }
             }
+        },
+        "/user": {
+            "post": {
+                "description": "Add the user that you want with all information describe in the minefields",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "home"
+                ],
+                "summary": "Add user in the system",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "File to upload",
+                        "name": "range",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "For user name",
+                        "name": "name",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "number",
+                        "description": "For user age",
+                        "name": "age",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "file",
+                        "description": "File to upload",
+                        "name": "file",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/home.HomeRes"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
